# glm

./: .appveyor.yml  .gitignore  .travis.yml  Android.bp  BUCK  BUILD  CMakeLists.txt  buckaroo.json  copying.txt  manual.md  meson.build  premake5.lua  readme.md
glm/: CMakeLists.txt  common.hpp  experimental.hpp.in  ext.hpp  fwd.hpp  geometric.hpp  glm.hpp  glm.sln  glm.vcxproj  mat2x2.hpp  mat2x3.hpp  mat2x4.hpp  mat3x2.hpp  mat3x3.hpp  mat3x4.hpp  mat4x2.hpp  mat4x3.hpp  mat4x4.hpp  matrix.hpp  packing.hpp  trigonometric.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector_relational.hpp
glm/core/: setup.hpp  type_vec2.hpp  type_vec2.inl  type_vec3.hpp  type_vec3.inl  type_vec4.hpp  type_vec4.inl
glm/detail/: _noise.hpp  _swizzle.hpp  _swizzle_func_gcc_vec.hpp  _vectorize.hpp  compute_common.hpp  compute_vector_decl.hpp  compute_vector_relational.hpp  func_common.hpp  func_common.inl  func_common_simd.inl  func_exponential.hpp  func_exponential.inl  func_geometric.hpp  func_geometric.inl  func_geometric_simd.inl  func_integer.inl  func_integer_simd.inl  func_matrix.hpp  func_matrix.inl  func_matrix_simd.inl  func_noise.hpp  func_noise.inl  func_packing.hpp  func_packing.inl  func_trigonometric.hpp  func_trigonometric.inl  func_vector_relational.hpp  func_vector_relational.inl  glm.cpp  intrinsic_common.hpp  intrinsic_common.inl  intrinsic_exponential.hpp  intrinsic_geometric.hpp  intrinsic_geometric.inl  intrinsic_integer.hpp  intrinsic_integer.inl  intrinsic_matrix.hpp  intrinsic_matrix.inl  mat2xR_common_operators.hpp  mat2xR_common_operators.inl  (+54 more)
glm/ext/: _matrix_vectorize.hpp  matrix_clip_space.hpp  matrix_common.hpp  matrix_common.inl  matrix_relational.hpp  matrix_relational.inl  matrix_transform.hpp  matrix_transform.inl  quaternion_common.hpp  quaternion_common.inl  quaternion_double.hpp  quaternion_double_precision.hpp  quaternion_exponential.hpp  quaternion_exponential.inl  quaternion_float.hpp  quaternion_float_precision.hpp  quaternion_geometric.hpp  quaternion_geometric.inl  quaternion_layout.hpp  quaternion_transform.hpp  quaternion_transform.inl  quaternion_trigonometric.hpp  quaternion_trigonometric.inl  scalar_common.inl  scalar_constants.hpp  scalar_constants.inl  scalar_integer.hpp  scalar_relational.hpp  scalar_relational.inl  scalar_ulp.hpp  scalar_ulp.inl  vec1.hpp  vector_common.hpp  vector_common.inl  vector_relational.hpp  vector_relational.inl  vector_ulp.hpp
glm/gtc/: bitfield.hpp  bitfield.inl  color_space.hpp  color_space.inl  constants.hpp  constants.inl  epsilon.inl  integer.hpp  integer.inl  matrix_access.inl  matrix_inverse.hpp  matrix_inverse.inl  matrix_transform.hpp  matrix_transform.inl  noise.hpp  noise.inl  packing.hpp  packing.inl  quaternion.hpp  quaternion.inl  random.hpp  random.inl  reciprocal.hpp  reciprocal.inl  round.hpp  round.inl  type_aligned.hpp  type_precision.hpp  type_ptr.hpp  type_ptr.inl  ulp.hpp  ulp.inl  vec1.hpp
glm/gtx/: adl.hpp  associated_min_max.hpp  associated_min_max.inl  bit.hpp  bit.inl  closest_point.hpp  closest_point.inl  color_space.hpp  color_space.inl  color_space_YCoCg.hpp  color_space_YCoCg.inl  common.hpp  common.inl  compatibility.hpp  compatibility.inl  component_wise.hpp  component_wise.inl  dual_quaternion.hpp  dual_quaternion.inl  euler_angles.hpp  euler_angles.inl  extend.hpp  extend.inl  extended_exponential.hpp  extended_exponential.inl  extended_min_max.hpp  extended_min_max.inl  extented_min_max.hpp  extented_min_max.inl  exterior_product.hpp  exterior_product.inl  fast_exponential.hpp  fast_exponential.inl  fast_square_root.hpp  fast_square_root.inl  fast_trigonometry.hpp  fast_trigonometry.inl  float_notmalize.inl  (+88 more)
(+169 files in other folders)
